# ampal

./: cspell.json  pyproject.toml
src/ampal/: amino_acids.py  base_ampal.py  pdb_parser.py  protein.py  voxelization.py  voxelize_cli.py
