[project]
name = "ampal"
version = "1.5.4"
description = "Intuitive framework for working with biomolecular structure."
readme = "README.md"
authors = [
    { name = "ChrisWellsWood", email = "cwwoodesq@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "cython",
  "h5py>=3.11.0",
  "networkx==3.1",
  "numpy==1.22",
  "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [project.scripts]
# voxelise = "ampal:voxelise_cli:main"
